src/components/slices/faculty-grid.module.scss
@import '../../base/module';

.FacultyGrid {
  position: relative;
  padding-top: 0;
  background-color: white;
}

.photoContainer {
  display: flex;
  gap: 30px;
  flex-direction: column;
  position: relative;
  top: -165px;
  @media (min-width: $tablet) {
    top: -285px;
  }
}

.headImage {
  width: 100%;
  height: auto;
  border: 10px solid white;

  @media (min-width: $tablet) {
    height: 500px;
  }
}

.facultyHead {
  margin-bottom: 60px;
  text-align: center;
  background-color: $color-sage;
  padding: 40px 40px 130px 40px;

  p {
    display: block;
    margin: 0 auto;
    width: 100%;
    text-align: center;
    font-size: 1em;
    @media (min-width: $tablet) {
      width: 60%;
      font-size: 1.125em;
    }
  }

  h2 {
    margin-bottom: 25px;
    font-size: 1.875em;
    font-weight: 400;
    font-family: $font-header;
    @media (min-width: $tablet) {
      font-size: 3.125em;
    }
  }

  @media (min-width: $tablet) {
    padding: 70px 60px 270px 60px;
  }
}

.headSubtitle {
  text-transform: uppercase;
  font-family: $font-secondary;
  font-size: 1.25em;
  @media (min-width: $tablet) {
    font-size: 1.5em;
  }
}

.facultyMembers {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 5px;
  @media (min-width: $tablet) {
    grid-template-columns: repeat(4, 1fr);
    gap: 25px;
  }
}

.name {
  font-weight: 600;
  font-family: $font-secondary;
  color: $color-black;
  text-transform: uppercase;
  font-size: 1.25em;
  line-height: 38px;
  display: block;
  margin-bottom: 16px;
  text-align: center;
  @media (min-width: $tablet) {
    margin-bottom: 0px;
    font-size: 1.5em;
  }
}

.employeeCard {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px;
  @media (min-width: $tablet) {
    padding: 25px 0px;
  }

  .imageWrap {
    width: 100%;
    aspect-ratio: 1/1;
    position: relative;
    overflow: hidden;
    background: $color-dove;
    margin-bottom: 20px;
    padding: 15px;
    @media (min-width: $tablet) {
      padding: 25px;
    }
  }

  .image {
    width: 100%;
    height: 100%;
    border-radius: 150px;
    display: block;
    margin: 0 auto;
    border: 10px solid white;
    @media (min-width: $tablet) {
      max-width: 300px;
      max-height: 300px;
    }
  }
}

.buttonArea {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 25px;
  @media (min-width: $tablet) {
    gap: 50px;
  }
}

.viewWorkButton {
  min-width: 250px;
  height: 65px;
  background: $color-orange;
  font-family: $font-secondary;
  font-weight: 600;
  color: #fff;
  text-transform: uppercase;
  line-height: 108%;
  letter-spacing: 0.125em;
  display: block;
  margin: 0 auto;
  @media (min-width: $tablet) {
    min-width: 296px;
  }
}

.btnContent {
  display: flex;
  justify-content: center;
  align-items: center;
}

.horizontalLine {
  width: 100%;
  height: 1px;
  background-color: $color-orange;
  margin: 20px 0;
}

